--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "language-prolog",
-  "version": "0.11.0",
+  "name": "language-datalog",
+  "version": "0.1.0",
   "description": "Prolog language support in Atom",
   "engines": {
     "atom": ">=0.50.0"
